--- a/fpm.toml
+++ b/fpm.toml
@@ -13,8 +13,8 @@ module-naming = false
 library = false
 [fortran]
 implicit-typing = false
-implicit-external = false
-source-form = "free"
+implicit-external = true
+source-form = "default"
 [dev-dependencies]
 test-drive.git = "https://github.com/fortran-lang/test-drive"
 test-drive.tag = "v0.4.0"
